Fix too high header image container

--- a/public/sass/thorsen.scss
+++ b/public/sass/thorsen.scss
@@ -209,7 +209,6 @@ header {
   margin-bottom: 0;
   position: relative;
 
-  .image { height: 330px; }
   .image img { vertical-align: bottom; }
 
   a { font-family: "Lato", sans-serif; color: #444; }
